PL-11: Fix error with downshift ref

--- a/src/pages/plants/components/Autocomplete.module.css
+++ b/src/pages/plants/components/Autocomplete.module.css
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   width: 95%;
-  max-width: 24rem;
+  max-width: 23rem;
 }
 
 .ul li:nth-of-type(1n + 14) {
